--- a/P2U5/src/app/app.component.html
+++ b/P2U5/src/app/app.component.html
@@ -1,10 +1,13 @@
 <body>
   <div class="header">
-    <img id="imagem" src="img\logo.png" alt="Logo">
+    <img src="assets/logoico.png" alt="Logo">
     <a>Lorena Beauty</a>
   </div>
   <div class="content">
-    <div class="card"></div>
+    <h2>Produtos a venda:</h2>
+    <app-produto *ngFor="let Produto of produtoList" [ProdutoData]="Produto"></app-produto>
   </div>
-  <div class="footer"></div>
+  <div class="footer">
+    <a>Todos os direitos reservados a Kauan Bento</a>
+  </div>
 </body>
