--- a/src/app/produto/produto.component.html
+++ b/src/app/produto/produto.component.html
@@ -3,5 +3,6 @@
     <div class="product-info">
         <h2 class="product-name">{{ProdutoData.nome}}</h2>
         <p class="product-price">{{ProdutoData.preco}}</p>
+        <a [routerLink]="['/detalhes', ProdutoData.id]">Detalhes</a>
     </div>
 </div>
